--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: Adrian's Profile
-email: hello@wheelhouse.io
+email: aeveliz@miners.utep.edu
 description: > # this means to ignore newlines until "baseurl:"
   Learn to use GitHub pages with Wheelhouse.io and Patchwork!
 baseurl: "/project-gh-pages"
-url: "http://wheehouseio.github.io"
-twitter_username: WheelhouseIO
-github_username:  wheelhouseio
+url: "http://adrianveliz.github.io"
+github_username:  adrianveliz
 permalink: /blog/:year/:title/
 
 
